# ParProg

./: .gitignore  CMakeLists.txt  README.md  connect.sh
cmake/: def_add_ex.cmake
exp/: CMakeLists.txt  exp.c  exp.cc  exp_hard.c
hello/: CMakeLists.txt  hello.c
lab1/: CMakeLists.txt  lab1.cc  lab1_par.cc  lab1_seq.cc  process.ipynb  stat.ipynb
mpi/: CMakeLists.txt
mpi/exp/: CMakeLists.txt  exp.cc  exp_hard.cc
mpi/hello/: CMakeLists.txt
mpi/lab1/: CMakeLists.txt  lab1.cc  process.ipynb
mpi/lab1_mpi/: CMakeLists.txt  lab1_mpi.cc
mpi/ring/: CMakeLists.txt  ring.cc
mpi/sum/: CMakeLists.txt
omp/: CMakeLists.txt
omp/balance/: CMakeLists.txt  balance.cc
omp/copyin/: CMakeLists.txt  copyin.cc
omp/erat/: CMakeLists.txt  erat.cc  erat.hh
omp/fft/: CMakeLists.txt  fft.cc  fft.hh  gen.py  timer.hh
omp/fft/res/: data.txt  data_par.txt  data_simp.txt  proc.ipynb
omp/hello/: CMakeLists.txt  hello.cc
omp/lab1/: CMakeLists.txt  lab1.cc  timer.hh
omp/matmul/: CMakeLists.txt  gen.py  matmul.cc  matmul.hh  matrix.hh  timer.hh
omp/matmul/res/: build_plot.ipynb  res.csv
omp/nested/: CMakeLists.txt  nested.cc
omp/seq/: CMakeLists.txt  seq.cc
omp/sudoku/: CMakeLists.txt  README.md  sudoku.cc
omp/sudoku/tests/: test.txt  test16.txt  test252.txt  test253.txt  test25s.txt  test3.txt
omp/sum/: CMakeLists.txt  sum.cc
ring/: CMakeLists.txt  ring.c
sum/: CMakeLists.txt  sum.c  sum.cc
threads/: CMakeLists.txt
threads/attrs/: CMakeLists.txt
threads/hello/: CMakeLists.txt  hello.cc
threads/int/: CMakeLists.txt  int.cc
threads/ring/: CMakeLists.txt
threads/sum/: CMakeLists.txt
